--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "json-refs": "^3.0.0",
     "lodash": "^4.17.4",
     "morgan": "^1.8.2",
+    "newrelic": "^1.40.0",
     "swagger-express-mw": "^0.7.0",
     "swagger-tools": "^0.10.1",
     "yaml-js": "^0.2.0",
